--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project</title>
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="./public/favicon.ico" />
-  </head>
-  <body class="max-w-screen-2xl box-border mx-auto">
 
-    <!-- Vue + Vite App -->
-    <div id="app"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Project</title>
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+</head>
 
-    <!-- Script App JS -->
-    <script type="module" src="/src/main.js"></script>
+<body class="box-border border bg-primaryBlack">
 
-  </body>
+  <!-- Vue + Vite App -->
+  <div id="app"></div>
+
+  <!-- Script App JS -->
+  <script type="module" src="/src/main.js"></script>
+
+</body>
+
 </html>
