feat(header,main): add search input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
 
-<body class="box-border border bg-primaryBlack">
+<body class="box-border bg-primaryBlack">
 
   <!-- Vue + Vite App -->
   <div id="app"></div>
