--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Project</title>
+  <title>Boolflix</title>
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 </head>
